--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,12 +1,13 @@
 .navbar{
     background-color:#001E5A;
+    padding: 0;
 }
 
-.nav {
+.nav, .contacts {
     background-color: #003C82;
 }
 
-.nav-link {
+.nav-link, a {
     color: #FFFFFF!important;
     font-weight: bold;
 }
@@ -42,4 +43,41 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
-  }
+}
+
+.first {
+    margin-left: 0px;
+}
+
+.container .col-3 {
+    width: 282px;
+    margin: 0px 12px;
+    margin-left: 12px;
+}
+
+.container h2{
+    margin-top: 20px;
+    color: #00276C;
+    font-weight: bold;
+}
+
+.gold {
+    color: #FAA41D;
+}
+
+.white {
+    color:white;
+}
+
+.contacts .container {
+    padding: 10px;
+}
+
+#footer {
+    background-color: #001E5A;
+    padding: 10px;
+}
+
+#footer img {
+    width: 100%;
+}
